--- a/Shuttle.Recall.Sql.Tests/packages.config
+++ b/Shuttle.Recall.Sql.Tests/packages.config
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="3.3.0" targetFramework="net40" />
+  <package id="Castle.Windsor" version="3.3.0" targetFramework="net40" />
   <package id="NUnit" version="3.5.0" targetFramework="net40" />
+  <package id="Shuttle.Core.Castle" version="1.0.1" targetFramework="net40" />
   <package id="Shuttle.Core.Data" version="4.2.6" targetFramework="net40" />
   <package id="Shuttle.Core.Infrastructure" version="4.2.52" targetFramework="net40" />
-  <package id="Shuttle.Recall" version="4.0.4" targetFramework="net40" />
+  <package id="Shuttle.Recall" version="4.0.6" targetFramework="net40" />
+  <package id="Shuttle.Recall.Tests" version="1.7.3" targetFramework="net40" />
 </packages>
