- script provider implementation

--- a/Shuttle.Recall.Sql.Tests/Shuttle.Recall.Sql.Tests.csproj
+++ b/Shuttle.Recall.Sql.Tests/Shuttle.Recall.Sql.Tests.csproj
@@ -51,16 +51,16 @@
       <HintPath>..\packages\Shuttle.Core.Data.4.2.6\lib\net40-full\Shuttle.Core.Data.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Shuttle.Core.Infrastructure, Version=4.2.52.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Shuttle.Core.Infrastructure.4.2.52\lib\net40-full\Shuttle.Core.Infrastructure.dll</HintPath>
+    <Reference Include="Shuttle.Core.Infrastructure, Version=4.2.54.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Shuttle.Core.Infrastructure.4.2.54\lib\net40-full\Shuttle.Core.Infrastructure.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Shuttle.Recall, Version=4.0.6.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Shuttle.Recall.4.0.6\lib\net40-full\Shuttle.Recall.dll</HintPath>
+    <Reference Include="Shuttle.Recall, Version=4.0.15.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Shuttle.Recall.4.0.15\lib\net40-full\Shuttle.Recall.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Shuttle.Recall.Tests, Version=1.7.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Shuttle.Recall.Tests.1.7.3\lib\net40-full\Shuttle.Recall.Tests.dll</HintPath>
+    <Reference Include="Shuttle.Recall.Tests, Version=1.7.10.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Shuttle.Recall.Tests.1.7.10\lib\net40-full\Shuttle.Recall.Tests.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -73,7 +73,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SqlEventStoreFixture.cs" />
+    <Compile Include="EventStoreFixture.cs" />
     <Compile Include="Fixture.cs" />
     <Compile Include="KeyStoreFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
