--- a/.build/package.nuspec
+++ b/.build/package.nuspec
@@ -9,9 +9,9 @@
 		<projectUrl>https://github.com/shuttle/Shuttle.Recall.Sql</projectUrl>
 		<iconUrl>https://raw.githubusercontent.com/Shuttle/Shuttle.Recall.Sql/master/.media/logo.png</iconUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
-		<description></description>
+		<description>Sql-based implementation of the relevant Shuttle.Recall interfaces.</description>
 		<releaseNotes/>
 		<copyright>Copyright (c) {year}, Eben Roux</copyright>
-		<tags>shuttle</tags>
-	</metadata>
+    <tags>shuttle shuttle-recall sql sql-server event-sourcing</tags>
+  </metadata>
 </package>
