--- a/Shuttle.Recall.Sql.Tests/App.config
+++ b/Shuttle.Recall.Sql.Tests/App.config
@@ -1,26 +1,26 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<configSections>
 		<sectionGroup name="shuttle">
-			<section name="projection" type="Shuttle.Recall.SqlServer.ProjectionSection, Shuttle.Recall.SqlServer"/>
+			<section name="projection" type="Shuttle.Recall.Sql.ProjectionSection, Shuttle.Recall.Sql" />
 		</sectionGroup>
 	</configSections>
 
 	<shuttle>
-		<projection eventStoreConnectionStringName="EventStore" eventProjectionConnectionStringName="EventStoreProjection"/>
+		<projection eventStoreConnectionStringName="EventStore" eventProjectionConnectionStringName="EventStoreProjection" />
 	</shuttle>
 
 	<connectionStrings>
-		<clear/>
-		<add name="EventStore" connectionString="Data Source=.\sqlexpress;Initial Catalog=Shuttle;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
-		<add name="EventStoreProjection" connectionString="Data Source=.\sqlexpress;Initial Catalog=ShuttleProjection;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
+		<clear />
+		<add name="EventStore" connectionString="Data Source=.\sqlexpress;Initial Catalog=Shuttle;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+		<add name="EventStoreProjection" connectionString="Data Source=.\sqlexpress;Initial Catalog=ShuttleProjection;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" /></startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="nunit.framework" publicKeyToken="2638cd05610744eb" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-3.4.1.0" newVersion="3.4.1.0"/>
+        <assemblyIdentity name="nunit.framework" publicKeyToken="2638cd05610744eb" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.6.0.0" newVersion="3.6.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
